tests/syntax_errors/test43_2.tl
require "ifj21"
(jdsh
